# eclipse-hackathon

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: deploy-master.yml  preview.yml  test-protocol.yml  test.yml
frontend/: .eslintignore  .eslintrc.cjs  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  vercel.json  vite.config.js  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.tsx
frontend/src/components/AnimatedButton/: AnimatedButton.stories.ts  AnimatedButton.tsx  style.ts
frontend/src/components/Header/: Header.tsx  style.ts
frontend/src/components/Liquidity/: Liquidity.tsx  style.ts
frontend/src/components/Navbar/: style.ts
frontend/src/components/NoConnected/: NoConnected.tsx  style.tsx
frontend/src/components/Snackbar/: index.tsx
frontend/src/components/TooltipHover/: TooltipHover.tsx  style.ts
frontend/src/containers/EventsHandlers/: market.ts  solanaWallet.ts
frontend/src/containers/FooterWrapper/: index.tsx
frontend/src/pages/: RootPage.tsx  RouterPages.tsx
frontend/src/pages/ListPage/: index.tsx
frontend/src/static/: icons.ts  links.ts
frontend/src/store/: index.ts
frontend/src/utils/: uiUtils.ts  utils.ts
protocol/: Anchor.toml  Cargo.toml  build.sh  package-lock.json  package.json  tests.sh  tsconfig.json
protocol/idls/: invariant.json  puppet.json
protocol/programs/invariant/: Cargo.toml
protocol/programs/protocol/: Cargo.toml
protocol/programs/protocol/src/: decimals.rs  errors.rs  lib.rs  math.rs  utils.rs
protocol/programs/protocol/src/contexts/: burn.rs  init.rs  init_pool.rs  invoke_close_position.rs  invoke_create_position.rs  invoke_update_seconds_per_liquidity.rs  mint.rs  mod.rs  reopen_position.rs  test.rs  token.rs
protocol/programs/protocol/src/contexts/token/: deposit.rs  mint.rs  mod.rs  withdraw.rs
protocol/programs/protocol/src/states/: lp_pool.rs  mod.rs  state.rs
protocol/programs/puppet/: Cargo.toml
protocol/programs/puppet/src/: errors.rs  lib.rs
protocol/programs/puppet/src/contexts/: create_counter.rs  mod.rs
protocol/programs/puppet/src/states/: counter.rs  mod.rs
protocol/scripts/: init.ts  minter.ts
protocol/sdk/: package-lock.json  package.json  tsconfig.json
protocol/sdk/src/: consts.ts  index.ts  math.ts  network.ts  protocol.ts  puppet.ts  types.ts  utils.ts  wallet.ts
protocol/tests/: burn.test.ts  init-lp-pool.test.ts  init.test.ts  invoke.test.ts  math.test.ts  mint-high-tick-big.test.ts  mint-high-tick-small.test.ts  mint-zero-tick-big.test.ts  mint-zero-tick-small.test.ts  mint.test.ts  multi-pool.test.ts  test-utils.ts  token.test.ts
workflows/: deploy-master.yml
(+103 files in other folders)
