[package]
name = "protocol"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "protocol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []


[dependencies]
anchor-lang = "0.29.0"
bytemuck = "1.16.3"
anchor-spl = "0.29.0"
puppet = { path = "../puppet", features = ["cpi"]}
invariant = { path = "../invariant", features = ["cpi"]}
