[package]
name = "protocol"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "protocol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []


[dependencies]
decimal = { path = "../invariant/decimal" }
bytemuck = "1.16.0"
anchor-lang = {version = "0.29.0", features = ["init-if-needed"]}
anchor-spl = "0.29.0"
puppet = { path = "../puppet", features = ["cpi"]}
invariant = { path = "../invariant", features = ["cpi"]}
