[package]
authors = [""]
description = ""
edition = "2018"
license = "MIT"
name = "puppet"
readme = ""
repository = ""
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "puppet"

[features]
cpi = ["no-entrypoint"]
default = []
no-entrypoint = []
no-idl = []

[dependencies]
anchor-lang = {version = "0.29.0", features = ["init-if-needed"]}
anchor-spl = "0.29.0"
borsh = "0.9"
enum_dispatch = "0.3"
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1"
spl-associated-token-account = {version = "1", features = ["no-entrypoint"]}
spl-math = {version = "0.1", features = ["no-entrypoint"]}
spl-token = {version = "3", features = ["no-entrypoint"]}
thiserror = "1"

[dev-dependencies]
anchor-client = "0.29"
anyhow = "1"
env_logger = "0.9"
once_cell = "1"
prettytable-rs = {version = "0.8"}
proptest = "1"
roots = "0.0.7"
serial_test = "0.5"
solana-client = "1"
solana-sdk = "1"
structopt = {version = "0.3"}

[build-dependencies]
solana-sdk = "1"
